--- a/ImageCutTestViewController.xib
+++ b/ImageCutTestViewController.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Helvetica.ttc">
-            <string>Helvetica-Bold</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageCutTestViewController">
             <connections>
@@ -25,6 +24,10 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35" customClass="PkhImageView">
+                    <rect key="frame" x="0.0" y="20" width="375" height="428"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="30">
                     <rect key="frame" x="0.0" y="448" width="375" height="219"/>
                     <subviews>
@@ -307,23 +310,20 @@
                         <constraint firstAttribute="height" constant="219" id="ymC-nl-8yB"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="35" customClass="PkhImageView">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="447"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </view>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
             <constraints>
-                <constraint firstItem="35" firstAttribute="top" secondItem="6" secondAttribute="top" id="1Ra-PN-wAu"/>
-                <constraint firstAttribute="trailing" secondItem="35" secondAttribute="trailing" id="4xm-hQ-Dl5"/>
-                <constraint firstItem="30" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="Jcj-eX-y8C"/>
-                <constraint firstItem="35" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="WiH-dW-DGL"/>
+                <constraint firstItem="35" firstAttribute="top" secondItem="U4W-f1-dze" secondAttribute="top" id="1Ra-PN-wAu"/>
+                <constraint firstItem="U4W-f1-dze" firstAttribute="trailing" secondItem="35" secondAttribute="trailing" id="4xm-hQ-Dl5"/>
+                <constraint firstItem="30" firstAttribute="leading" secondItem="U4W-f1-dze" secondAttribute="leading" id="Jcj-eX-y8C"/>
+                <constraint firstItem="35" firstAttribute="leading" secondItem="U4W-f1-dze" secondAttribute="leading" id="WiH-dW-DGL"/>
                 <constraint firstAttribute="trailing" secondItem="30" secondAttribute="trailing" id="YiY-1V-mcd"/>
-                <constraint firstItem="30" firstAttribute="top" secondItem="35" secondAttribute="bottom" constant="1" id="cL4-rV-fZd"/>
-                <constraint firstAttribute="bottom" secondItem="30" secondAttribute="bottom" id="fly-QL-CIP"/>
+                <constraint firstItem="30" firstAttribute="top" secondItem="35" secondAttribute="bottom" id="cL4-rV-fZd"/>
+                <constraint firstItem="U4W-f1-dze" firstAttribute="bottom" secondItem="30" secondAttribute="bottom" id="fly-QL-CIP"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <point key="canvasLocation" x="478" y="509"/>
+            <viewLayoutGuide key="safeArea" id="U4W-f1-dze"/>
+            <point key="canvasLocation" x="-78" y="138"/>
         </view>
     </objects>
 </document>
